Modify Completed ButtonBox prototype

--- a/public/prototype/buttonBox.html
+++ b/public/prototype/buttonBox.html
@@ -11,18 +11,176 @@
 
         <div class="topContents">
 
-          <label>
-            <input type="checkbox" class="input" />
-            <span class="span"></span>
-          </label>
-          <label>
-            <input type="checkbox" class="input" />
-            <span class="span"></span>
-          </label>
-          <label>
-            <input type="checkbox" class="input" />
-            <span class="span"></span>
-          </label>
+          <div class="leftButtons">
+
+            <div class="leftTopButtons">
+
+              <div class="crossButtons">
+                <label class="labelLeft">
+                  <input type="checkbox" class="input" />
+                  <span class="span"></span>
+                </label>
+              </div>
+
+              <div class="crossButtons">
+                <label class="labelLeft">
+                  <input type="checkbox" class="input" />
+                  <span class="span"></span>
+                </label>
+                <label class="labelLeft">
+                  <input type="checkbox" class="input" />
+                  <span class="span"></span>
+                </label>
+                <label class="labelLeft">
+                  <input type="checkbox" class="input" />
+                  <span class="span"></span>
+                </label>
+              </div>
+
+              <div class="crossButtons">
+                <label class="labelLeft">
+                  <input type="checkbox" class="input" />
+                  <span class="span"></span>
+                </label>
+              </div>
+              
+            </div> <!-- leftTopButtons -->
+
+            <div class="leftBottomButtons">
+              <div class="customButton">
+                <span>CUSTOM</span>
+              </div>
+            </div> <!-- leftBottomButtons -->
+
+          </div> <!-- leftButtons -->
+
+          <div class="rightButtons">
+
+            <div class="rightColumn">
+              <div class="buttonWithDescription">
+                <label class="labelRight">
+                  <input type="checkbox" class="input" />
+                  <span class="span"></span>
+                </label>
+                <span class="description">SCROLL</span>
+              </div>
+              <div class="buttonWithDescription">
+                <label class="labelRight">
+                  <input type="checkbox" class="input" />
+                  <span class="span"></span>
+                </label>
+                <span class="description">SCROLL</span>
+              </div>
+              <div class="buttonWithDescription">
+                <label class="labelRight">
+                  <input type="checkbox" class="input" />
+                  <span class="span"></span>
+                </label>
+                <span class="description">SCROLL</span>
+              </div>
+              <div class="buttonWithDescription">
+                <label class="labelRight">
+                  <input type="checkbox" class="input" />
+                  <span class="span"></span>
+                </label>
+                <span class="description">SCROLL</span>
+              </div>
+            </div> <!-- rightColumn -->
+
+            <div class="rightColumn">
+              <div class="buttonWithDescription">
+                <label class="labelRight">
+                  <input type="checkbox" class="input" />
+                  <span class="span"></span>
+                </label>
+                <span class="description">SCROLL AAAAAA</span>
+              </div>
+              <div class="buttonWithDescription">
+                <label class="labelRight">
+                  <input type="checkbox" class="input" />
+                  <span class="span"></span>
+                </label>
+                <span class="description">SCROLL</span>
+              </div>
+              <div class="buttonWithDescription">
+                <label class="labelRight">
+                  <input type="checkbox" class="input" />
+                  <span class="span"></span>
+                </label>
+                <span class="description">SCROLL</span>
+              </div>
+              <div class="buttonWithDescription">
+                <label class="labelRight">
+                  <input type="checkbox" class="input" />
+                  <span class="span"></span>
+                </label>
+                <span class="description">SCROLL</span>
+              </div>
+            </div> <!-- rightColumn -->
+
+            <div class="rightColumn">
+              <div class="buttonWithDescription">
+                <label class="labelRight">
+                  <input type="checkbox" class="input" />
+                  <span class="span"></span>
+                </label>
+                <span class="description">SCROLL</span>
+              </div>
+              <div class="buttonWithDescription">
+                <label class="labelRight">
+                  <input type="checkbox" class="input" />
+                  <span class="span"></span>
+                </label>
+                <span class="description">SCROLL</span>
+              </div>
+              <div class="buttonWithDescription">
+                <label class="labelRight">
+                  <input type="checkbox" class="input" />
+                  <span class="span"></span>
+                </label>
+                <span class="description">SCROLL</span>
+              </div>
+              <div class="buttonWithDescription">
+                <label class="labelRight">
+                  <input type="checkbox" class="input" />
+                  <span class="span"></span>
+                </label>
+                <span class="description">SCROLL</span>
+              </div>
+            </div> <!-- rightColumn -->
+
+            <div class="rightColumn">
+              <div class="buttonWithDescription">
+                <label class="labelRight">
+                  <input type="checkbox" class="input" />
+                  <span class="span"></span>
+                </label>
+                <span class="description">SCROLL</span>
+              </div>
+              <div class="buttonWithDescription">
+                <label class="labelRight">
+                  <input type="checkbox" class="input" />
+                  <span class="span"></span>
+                </label>
+                <span class="description">SCROLL</span>
+              </div>
+              <div class="buttonWithDescription">
+                <label class="labelRight">
+                  <input type="checkbox" class="input" />
+                  <span class="span"></span>
+                </label>
+                <span class="description">SCROLL</span>
+              </div>
+              <div class="buttonWithDescription">
+                <label class="labelRight">
+                  <input type="checkbox" class="input" />
+                  <span class="span"></span>
+                </label>
+                <span class="description">SCROLL</span>
+              </div>
+            </div> <!-- rightColumn -->
+
+          </div> <!-- rightButtons -->
 
         </div> <!-- topContents -->
 
