Modify ButtonBox prototype

--- a/public/prototype/buttonBox.html
+++ b/public/prototype/buttonBox.html
@@ -15,33 +15,37 @@
 
             <div class="leftTopButtons">
 
-              <div class="crossButtons">
-                <label class="labelLeft">
-                  <input type="checkbox" class="input" />
-                  <span class="span"></span>
-                </label>
-              </div>
+              <div>
 
-              <div class="crossButtons">
-                <label class="labelLeft">
-                  <input type="checkbox" class="input" />
-                  <span class="span"></span>
-                </label>
-                <label class="labelLeft">
-                  <input type="checkbox" class="input" />
-                  <span class="span"></span>
-                </label>
-                <label class="labelLeft">
-                  <input type="checkbox" class="input" />
-                  <span class="span"></span>
-                </label>
-              </div>
+                <div class="crossButtons">
+                  <label class="labelLeft">
+                    <input type="checkbox" class="input" />
+                    <span class="span"></span>
+                  </label>
+                </div>
 
-              <div class="crossButtons">
-                <label class="labelLeft">
-                  <input type="checkbox" class="input" />
-                  <span class="span"></span>
-                </label>
+                <div class="crossButtons">
+                  <label class="labelLeft">
+                    <input type="checkbox" class="input" />
+                    <span class="span"></span>
+                  </label>
+                  <label class="labelLeft">
+                    <input type="checkbox" class="input" />
+                    <span class="span"></span>
+                  </label>
+                  <label class="labelLeft">
+                    <input type="checkbox" class="input" />
+                    <span class="span"></span>
+                  </label>
+                </div>
+
+                <div class="crossButtons">
+                  <label class="labelLeft">
+                    <input type="checkbox" class="input" />
+                    <span class="span"></span>
+                  </label>
+                </div>
+
               </div>
               
             </div> <!-- leftTopButtons -->
