Modify Made it easier to push the Menu Icon

--- a/public/prototype/menu.html
+++ b/public/prototype/menu.html
@@ -6,7 +6,23 @@
     <link rel="stylesheet" href="menu.css">
   </head>
   <body>
-    <input id="open" class="menuopen" type="checkbox" tabindex="1">
+
+    <header>
+      <div class="menuIcon2">
+        <input id="toggle" class="toggle" type="checkbox"></input>
+        <label for="toggle" class="hamburger">
+          <div class="topBun"></div>
+          <div class="meat"></div>
+          <div class="bottomBun"></div>
+        </label>
+      </div>
+    </header>
+
+
+
+
+  
+    
     <div id="menu" tabindex="2">
       <div id="innerMenu">
         <nav>
