Modify DefaultContent prototype

--- a/public/prototype/default.html
+++ b/public/prototype/default.html
@@ -11,15 +11,11 @@
         <div class="topContents">
 
           <div class="leftContents">
-
-            <div class="gear">
-            </div> <!-- gear -->
-
           </div> <!-- leftContents -->
 
           <div class="rightContents">
 
-            <div class="session">
+            <div class="session border">
               <div class="sessionHeader header">
                 <span>SESSION</span>
               </div>
@@ -49,7 +45,7 @@
               </div>
             </div> <!-- current -->
 
-            <div class="timeLogs">
+            <div class="timeLogs border">
               <div>
                 <div class="timeLogLap header">
                   <span>LAP</span>
@@ -106,20 +102,6 @@
                   <span>+88:88.888</span>
                 </div>
               </div>
-              <div>
-                <div class="timeLogLap header">
-                  <span>LAP</span>
-                </div>
-                <div class="timeLogLapCount lap">
-                  <span>888</span>
-                </div>
-                <div class="timeLogTime time">
-                  <span>88:88.888</span>
-                </div>
-                <div class="timeLogDelta minusDelta">
-                  <span>-88:88.888</span>
-                </div>
-              </div>
             </div> <!-- timeLogs -->
 
             <div class="otherTime border">
@@ -157,38 +139,6 @@
         </div> <!-- topContents -->
 
         <div class="bottomContents">
-          <div class="fuel">
-
-            <img src="../src/image/fuel-blue.png" />
-
-            <div class="fuelValue value">
-              <span>88.88L</span>
-            </div>
-
-            <div class="fuelDetails">
-              <div>
-                <div class="fuelDetailsHeader header">
-                  <span>LATEST</span>
-                </div>
-                <div class="fuelDetailsValue value">
-                  <span>88.88L</span>
-                </div>
-              </div>
-              <div>
-                <div class="fuelDetailsHeader header">
-                  <span>AVERAGE</span>
-                </div>
-                <div class="fuelDetailsValue value">
-                  <span>888.88L</span>
-                </div>
-              </div>
-            </div> <!-- fuelDetails -->
-
-          </div> <!-- fuel -->
-
-          <div class="tyre">
-          </div> <!-- tyre -->
-
         </div> <!-- bottomContents-->
 
       </div> <!-- contents -->
