Add Real time gap on DefaultContent

--- a/public/prototype/default.html
+++ b/public/prototype/default.html
@@ -40,26 +40,17 @@
               <div class="currentLapCount lap">
                 <span>888/888</span>
               </div>
-              <div class="currentLapTime time">
-                <span>88:88.888</span>
+              <div class="currentLapTimeBox">
+                <div class="currentLapGap plusDelta">
+                  <span>+88:88.888</span>
+                </div>
+                <div class="currentLapTime time">
+                  <span>88:88.888</span>
+                </div>
               </div>
             </div> <!-- current -->
 
             <div class="timeLogs border">
-              <div>
-                <div class="timeLogLap header">
-                  <span>LAP</span>
-                </div>
-                <div class="timeLogLapCount lap">
-                  <span>888</span>
-                </div>
-                <div class="timeLogTime time">
-                  <span>88:88.888</span>
-                </div>
-                <div class="timeLogDelta plusDelta">
-                  <span>+88:88.888</span>
-                </div>
-              </div>
               <div>
                 <div class="timeLogLap header">
                   <span>LAP</span>
