--- a/public/prototype/engine.html
+++ b/public/prototype/engine.html
@@ -19,45 +19,6 @@
 
           <div class="rightContents">
 
-            <div class="engine">
-
-              <div class="icon">
-                <img src="../src/image/engine.png" />
-              </div>
-
-              <div class="valueRecords">
-
-                <div class="valueRecord">
-                  <div class="value">
-                    <span>888</span>
-                  </div>
-                  <div class="unit">
-                    <span>HP</span>
-                  </div>
-                </div>
-
-                <div class="valueRecord">
-                  <div class="value">
-                    <span>8888</span>
-                  </div>
-                  <div class="unit">
-                    <span>NM</span>
-                  </div>
-                </div>
-
-                <div class="valueRecord">
-                  <div class="value">
-                    <span>88888</span>
-                  </div>
-                  <div class="unit">
-                    <span>rad/s</span>
-                  </div>
-                </div>
-
-              </div>
-
-            </div> <!-- engine -->
-
             <div class="valueTable">
 
               <div class="header">
@@ -73,6 +34,99 @@
                   <span>MAX</span>
                 </div>
               </div>
+
+              <div class="engine">
+
+                <div class="icon">
+                  <img src="../src/image/engine.png" />
+                </div>
+
+                <div class="valueRecords">
+
+                  <div class="valueRecord">
+                    <div>
+                      <div class="value">
+                        <span>8888</span>
+                      </div>
+                      <div class="unit">
+                        <span>HP</span>
+                      </div>
+                    </div>
+                    <div>
+                      <div class="value">
+                        <span>88888</span>
+                      </div>
+                      <div class="unit">
+                        <span>HP</span>
+                      </div>
+                    </div>
+                    <div>
+                      <div class="value">
+                        <span>88888</span>
+                      </div>
+                      <div class="unit">
+                        <span>HP</span>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="valueRecord">
+                    <div>
+                      <div class="value">
+                        <span>88</span>
+                      </div>
+                      <div class="unit">
+                        <span>NM</span>
+                      </div>
+                    </div>
+                    <div>
+                      <div class="value">
+                        <span>88</span>
+                      </div>
+                      <div class="unit">
+                        <span>NM</span>
+                      </div>
+                    </div>
+                    <div>
+                      <div class="value">
+                        <span>88888</span>
+                      </div>
+                      <div class="unit">
+                        <span>NM</span>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="valueRecord">
+                    <div>
+                      <div class="value">
+                        <span>88</span>
+                      </div>
+                      <div class="unit">
+                        <span>rad/s</span>
+                      </div>
+                    </div>
+                    <div>
+                      <div class="value">
+                        <span>88</span>
+                      </div>
+                      <div class="unit">
+                        <span>rad/s</span>
+                      </div>
+                    </div>
+                    <div>
+                      <div class="value">
+                        <span>88888</span>
+                      </div>
+                      <div class="unit">
+                        <span>rad/s</span>
+                      </div>
+                    </div>
+                  </div>
+
+                </div> <!-- valueRecords -->
+
+              </div> <!-- oil -->
 
               <div class="oil">
 
